<?xml version="1.0"?>
<package>
  <name>prm_sim</name>
  <version>0.0.0</version>
  <description>Probablistic Road Map simulation</description>
  <maintainer email="andrew.pope456@gmail.com">arosspope</maintainer>
  <license>MIT</license>

  <!-- Use test_depend for packages you need only for testing: -->
  <test_depend>gtest</test_depend>

  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Use run_depend for packages you need at runtime: -->
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
